# d.va

./: .env.example  .gitignore  README.md  pipeline.py  pyproject.toml  requirements.txt  t.xml  test_ssml.py  todo.md  web.py  webui.py
assets/: ai_podcast_v1.webm
data/: rebuild.py
language/: en.json  zh-CN.json
llm_ssml_service/: ssml_service.py  template.txt  test.py
modules/: config.py  denoise.py  models_setup.py  refiner.py
modules/Denoiser/: AudioDenoiser.py
modules/api/: Api.py  api_setup.py  app_config.py  utils.py  worker.py
modules/api/impl/: google_api.py  models_api.py  openai_api.py  refiner_api.py  speaker_api.py  ssml_api.py  stt_api.py  style_api.py  sys_api.py  tts_api.py  vc_api.py  xtts_v2_api.py
modules/api/v2/: BlobStorage.py  tts_api.py
modules/core/handler/: AudioHandler.py  STTHandler.py  TTSHandler.py  VCHandler.py
modules/core/models/: AudioReshaper.py  BaseZooModel.py  TTSModel.py
modules/core/pipeline/: factory.py  pipeline.py  processor.py
modules/core/spk/: SpkMgr.py  TTSSpeaker.py  __init__.py
modules/core/ssml/: SSMLParser.py
modules/core/tn/: ChatTtsTN.py  FireRedTtsTN.py  TNPipeline.py  base_tn.py
modules/core/tools/: SentenceSplitter.py  misc.py
modules/devices/: devices.py  mac_devices.py
modules/finetune/: dataset.py  logger.py  model.py  output.py  train.py  train_speaker.py
modules/llm_ssml_service/: demo.xml  ssml_service.py  template.txt  test.py
modules/utils/: CsvMgr.py  SeedContext.py  audio_utils.py  cache.py  env.py  ffmpeg.py  git.py  hf.py  ignore_warn.py  monkey_tqdm.py  rng.py
modules/webui/: app.py  gradio_extensions.py  llm_podcast_tab.py  localization.py  localization_runtime.py  speaker_tab.py  system_tab.py  tts_tab.py  webui_utils.py
modules/webui/audio_tools/: tools_tab.py  video_cut.py
prompts/: suggestion.txt  t.xml
ssml_service/: ssml_service.py  test.py
(+101 files in other folders)
