[project]
name = "d-va"
version = "0.2.1"
description = "D.va AI driven podcast."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.3.0",
    "cachetools==5.3.0",
    "cn2an==0.5.23",
    "diffusers==0.25.0",
    "einx==0.3.0",
    "ema_pytorch==0.7.7",
    "emojiswitch==0.0.3",
    "eng_to_ipa==0.0.2",
    "faster_whisper==1.1.1",
    "ftfy>=6.3.1",
    "funasr==1.2.3",
    "gradio>=5.12",
    "huggingface-hub>=0.30.2",
    "hyperpyyaml>=1.2.2",
    "inflect==7.5.0",
    "jieba==0.42.1",
    "langdetect==1.0.9",
    "librosa==0.10.2.post1",
    "lightning==2.5.0.post0",
    "lightning_utilities==0.12.0",
    "loguru>=0.7.3",
    "loralib==0.1.2",
    "lxml==5.3.0",
    "matplotlib==3.6.3",
    "mistune==3.0.2",
    "modelscope==1.22.3",
    "moviepy==1.0.3",
    "natsort==8.4.0",
    "numba==0.61.0",
    "omegaconf==2.3.0",
    "onnxruntime==1.20.1",
    "openai>=1.75.0",
    "protobuf==3.20.3",
    "psutil==5.9.4",
    "pyarrow==19.0.0",
    "pybase16384==0.3.8",
    "pydub==0.25.1",
    "pynini==2.1.6",
    "pypinyin==0.53.0",
    "pyrootutils==1.0.4",
    "pyrubberband==0.4.0",
    "pysubs2==1.8.0",
    "python-ms>=1.1.1",
    "python_box==7.3.2",
    "pytorch_lightning==2.5.0.post0",
    "pyyaml>=6.0.1",
    "regex==2024.11.6",
    "soundfile==0.13.1",
    "tiktoken==0.8.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchdiffeq==0.2.5",
    "tqdm==4.67.1",
    "transformers==4.41.1",
    "Unidecode==1.3.8",
    "vector-quantize-pytorch>=1.22.15",
    "vocos==0.1.0",
    "zhconv==1.4.3",
    "zhon>=2.1.1",
]


[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"

[tool.ruff]
line-length = 200
extend-exclude = [
    "modules/repos_static",
]

[tool.ruff.lint]
extend-select = ["ASYNC", "ASYNC1"]
ignore = ["E402"]